--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.15.14",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "core-js": "^3.36.1",
+    "firebase": "^10.11.0",
     "moment": "^2.30.1",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
