--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "sweetalert2": "^11.10.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
