--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_URL="http://45.144.164.186:3000"
+#VITE_API_URL="https://www.sasirestuarant.com/api"
+VITE_API_URL="https://www.sasirestuarant.com/api"
+VITE_BASE_URL="https://www.sasirestuarant.com/"
