--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #VITE_API_URL="https://www.sasirestuarant.com/api"
 VITE_API_URL="https://www.sasirestuarant.com/api"
-VITE_BASE_URL="https://www.sasirestuarant.com/"
+VITE_BASE_URL="https://www.sasirestuarant.com"
