--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-#VITE_API_URL="https://www.sasirestuarant.com/api"
+#VITE_API_URL="http://localhost/api"
 VITE_API_URL="https://api.sasirestuarant.com"
 VITE_BASE_URL="https://www.sasirestuarant.com"
+VITE_BAKUP_URL="https://www.delivery.sasirestuarant.com"
