--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "firebase": "^10.11.0",
     "moment": "^2.30.1",
     "nanoid": "^5.0.6",
+    "promptpay-qr": "^0.5.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
@@ -38,6 +40,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass": "^1.77.8",
     "vite": "^5.2.0"
   }
 }
