--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
