--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "homepage": "https://www.sasirestuarant.com/",
+  "homepage": "https://www.app.sasirestuarant.com/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "core-js": "^3.36.1",
+    "facebook-js-sdk": "^1.0.4",
     "firebase": "^10.11.0",
     "moment": "^2.30.1",
     "nanoid": "^5.0.6",
@@ -26,7 +27,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
