--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #VITE_API_URL="http://localhost/api"
-VITE_BAKUP_URL="https://www.delivery.sasirestuarant.com"
+VITE_API_URL="https://www.delivery.sasirestuarant.com"
 #VITE_BAKUP_URL="http://45.144.164.186:4000"
