--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-#VITE_API_URL="http://localhost/api"
-VITE_API_URL="https://api.sasirestuarant.com"
+
+
 VITE_BASE_URL="https://www.sasirestuarant.com"
-VITE_BAKUP_URL="https://www.delivery.sasirestuarant.com"
-#VITE_BAKUP_URL="http://45.144.164.186:4000"
+VITE_BAKUP_URL="https://api.sasirestuarant.com"
