--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "sweetalert2": "^11.10.8",
