--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-     "deploy": "node deploy.js"
+    "deploy": "node deploy.js"
   },
   "homepage": "https://www.pos.sasirestuarant.com/",
   "dependencies": {
@@ -21,14 +21,18 @@
     "core-js": "^3.36.1",
     "firebase": "^10.11.0",
     "ftp-deploy": "^2.4.7",
+    "html5-qrcode": "^2.3.8",
     "moment": "^2.30.1",
     "nanoid": "^5.0.6",
     "promptpay-qr": "^0.5.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-barcode": "^1.6.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
+    "react-qr-code": "^2.0.18",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "sweetalert2": "^11.10.8",
