--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.36.1",
     "facebook-js-sdk": "^1.0.4",
     "firebase": "^10.14.1",
+    "lucide-react": "^0.563.0",
     "moment": "^2.30.1",
     "nanoid": "^5.0.6",
     "promptpay-qr": "^0.5.0",
